--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Responsive website Cakery</title>
+        <title>Productos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
